# benimator

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  justfile  release.toml  release.yml  renovate.json
.cargo/: fast_compiles_config
.circleci/: config.yml
.github/workflows/: bevy-main.yml  build.yml  check.yml  create-release.yml  dependencies.yml  look-ahead.yml  post-release.yml  release.yml  rust-nightly.yml  verify.yml
assets/: README.md  coin.animation.ron  coin.animation.yml
benches/: play_component.rs
doc/adr/: 0001-record-architecture-decisions.md  0002-optional-bevy-dependency.md  0003-cargo-smart-release.md  README.md
examples/: bevy.rs  bevy_with_asset_loader.rs  change_animation.rs  demo.rs  end_of_animation_detection.rs  ping_pong.rs  readme.rs  removal_detection.rs  using_animation_file.rs
src/: animation.rs  lib.rs  state.rs  warnings.rs
src/animation/: builder.rs  dto.rs  load.rs  mod.rs  parse.rs
src/integration/: bevy_07.rs  bevy_08.rs  mod.rs
src/integrations/: bevy_07.rs  mod.rs
tests/: bevy_spec.rs  spec.rs
