[package]
name = "benimator"
version = "4.0.0-beta.2"
edition = "2021"
rust-version = "1.62"
authors = ["Jonathan Cornaz"]
license = "Unlicense OR MIT"
description = "A sprite animation library for rust game development"
repository = "https://github.com/jcornaz/benimator"
keywords = ["game", "gamedev", "anmiation"]
categories = ["game-development"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
# Public dependencies (Present in the public API)
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_yaml = { version = "0.9.2", default-features = false }
rstest = { version = "0.15.0", default-features = false }
bevy = { version = "0.8.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11", "dynamic"] }
anyhow = "1.0"

[build-dependencies]
rustc_version = "0.4.0"

[[example]]
name = "bevy_with_asset_loader"
required-features = ["serde"]
