[package]
name = "benimator"
version = "4.1.3"
edition = "2021"
rust-version = "1.70"
authors = ["Jonathan Cornaz"]
license = "Unlicense OR MIT"
description = "A sprite animation library for rust game development"
repository = "https://github.com/jcornaz/benimator"
keywords = ["game", "gamedev", "anmiation"]
categories = ["game-development"]

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
# Public dependencies (Present in the public API)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_yaml = { version = "0.9.34", default-features = false }
rstest = { version = "0.18.2", default-features = false }
bevy = { version = "0.12.1", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_sprite", "bevy_core_pipeline", "png", "x11", "dynamic_linking"] }
anyhow = "1.0"
toml = "0.8.12"

[build-dependencies]
rustc_version = "0.4.0"

